most-of-the-labs/finished/DevOps-Materials/K8s/11 - Security Fundamentals/14Hands-On - Combining Pod Selectors/policies/allow-curl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector:
    matchLabels:
      app: color-api
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: dev
        podSelector:
          matchLabels:
            app: traffic-generator
